--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-    <%= render 'books/list', book: @book_new, user: @book %>
+    <%= render 'books/list', book: @book_new, user: @book.user %>
     </div>
     
         <div class="col-md-8 offset-md-1">
