--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,13 +17,56 @@
               <% end %></td>
               <td><%= @book.title %></td>
               <td><%= @book.body %></td>
+              <td><% if @book.favorited_by?(current_user) %>
+                    <p>
+                      <%= link_to book_favorites_path(@book), method: :delete do %>
+                        ♥<%= @book.favorites.count %>
+                      <% end %>
+                    </p>
+                    <% else %>
+                    <p>
+                      <%= link_to book_favorites_path(@book), method: :post do %>
+                        ♡<%= @book.favorites.count %>
+                      <% end %>
+                    </p>
+                  <% end %><td>
+                    <td><p>コメント数:<%= @books_comments.count %></p></td>
+  
               <% if @book.user == current_user %>
               <td><%= link_to "Edit", edit_book_path(@book.id), class: "btn btn-sm btn-success" %></td>
               <td><%= link_to "Destroy", book_path(@book.id), class:"btn btn-sm btn-danger", method: :delete, data: {confirm:'本当に消しますか？'} %></td>
               <% end %>
-            </tr>
+              </tr>
             </tbody>
           </table>
+          
+          <div class=comments>
+            <table>
+              <tbody>
+                  <% @books_comments.each do |book_comment| %>
+                  <tr><td><p><%= attachment_image_tag book_comment.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %></p>
+                  <%= link_to book_comment.user.name, user_path(book_comment.user_id) %>
+                  <td><%= book_comment.comment %></td>
+                  <td>
+                    <% if book_comment.user == current_user %>
+                    <%= link_to "Destroy", book_books_comment_path(book_id: book_comment.book,id: book_comment.id), class:"btn btn-sm btn-danger", method: :delete, data: {confirm:'本当に消しますか？'} %></td>
+                  </td><% end %></tr>
+                  
+                  <% end %>
+              </tbody>
+            </table>
+          </div>
+          
+          <%= form_with(model:[@book, @books_comment],local: true) do |f| %>
+          <div class=comment_form>
+              <div class="col-xs-10">
+                <%= f.label :comment,"コメント" %>
+                <%= f.text_area :comment, class:"form-control input-lg" %>
+              </div>
+              <%= f.submit '送信' %>
+              
+            </div>
+            <% end %>
        </div> 
   </div>
 </div>
