--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,7 @@
               <td><%= link_to book.title, book_path(book.id) %></td>
               <td><%= book.body %></td>
               <td colspan="3"></td>
+              <td><p>コメント数:<%= book.books_comments.count %></p></td>
             </tr>
             <% end %>
             </tbody>
