--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -17,12 +17,28 @@
         <th>introduction</th>
         <th><%= user.introduction %></th>
       </tr>
+      <tr>
+        <th>follows</th>
+        <th><p><%= link_to @user.follows.count, follows_user_path(user) %></p></th>
+      </tr>
+      <tr>
+        <th>followers</th>
+        <th><p><%= link_to @user.followers.count, followers_user_path(user) %></p></th>
+      </tr>
     </tbody>
   </table>
   
   
   <div class="row">
+    <% if user == current_user %>
     <%= link_to '',edit_user_path(user), class:"btn btn-outline-secondary btn block fas fa-user-cog w-100" %>
+    <% else %>
+        <% if user.followed_by?(current_user) %>
+            <p><%=link_to "フォロー外す", user_relationships_path(user), method: :delete, class:"btn btn-info w-auto" %></p>
+        <% else %>
+            <p><%=link_to "フォローする", user_relationships_path(user), method: :post, class:"btn btn-success w-auto" %></p>
+        <% end %>
+            <% end %>
   </div>
 
 <%= form_with model: book, local:true do |f| %>
