--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
     
     <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
-    <table class="table table-striped">
+    <table class="table table-hover tableinverse">
         <thead>
         <tr>
           <th>image</th>
@@ -24,7 +24,15 @@
               </td>
               <td><%= user.name %></td>
               <td><%= link_to "Show", user_path(user.id) %></td>
-              <td colspan="3"></td>
+              <td><p>フォロー数:<%= user.follows.count %></p></td>
+              <td><p>フォロワー数<%= user.followers.count %></p></td>
+              <td><% if current_user != user %>
+        <% if user.followed_by?(current_user) %>
+            <p><%=link_to "フォローを外す", user_relationships_path(user.id), method: :delete %></p>
+        <% else %>
+            <p><%=link_to "フォローする", user_relationships_path(user.id), method: :post %></p>
+        <% end %>
+            <% end %></td>
             </tr>
         </tbody>
         <% end %>
