--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header class="shadow-sm">
+    <header class="shadow-none">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
         <div class="container">
          <a class="navbar-brand p-3" href="/">Bookers</a>
@@ -50,12 +50,22 @@
           </div>
         </div>
       </nav>
-      <p id="notice"><%=  notice %></p>
+     <p id="notice"><%=  notice %></p>
+  <div class="serch-box">
+  <% if user_signed_in? %>
+  <%= form_with url:'/search', method: :get, local: true do |f| %>
+  <%= select_tag 'range' ,options_for_select([["User", "1"], ["Book", "2"]]) %>
+  <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+  <%= f.text_field :word %>
+  <%= f.submit '検索' %>
+  <% end %>
+  <% end %>
+  </div>
+</div>
     </header>
+    
     <%= yield %>
   </body>
-  
-  
   
   <div class="conteiner mt-5">
     <div class="row">
