--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -19,11 +19,11 @@
       </tr>
       <tr>
         <th>follows</th>
-        <th><p><%= link_to @user.follows.count, follows_user_path(user) %></p></th>
+        <th><p><%= link_to user.follows.count, follows_user_path(user) %></p></th>
       </tr>
       <tr>
         <th>followers</th>
-        <th><p><%= link_to @user.followers.count, followers_user_path(user) %></p></th>
+        <th><p><%= link_to user.followers.count, followers_user_path(user) %></p></th>
       </tr>
     </tbody>
   </table>
