--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,49 +1,31 @@
 <div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-     <%= render 'list', book:@book, user:@user %>
-    </div>
-
+ <div class="row">
+    <div class="col-md-3"><%= render 'list', book:@book, user:@user %></div>
           <div class="col-md-8 offset-md-1">
             <h2>Books</h2>
             <table class="table table-hover tableinverse">
               <thead>
-              <tr>
-                <th></th>
-                <th>title</th>
-                <th>opinion</th>
-                <th colspan="3"></th>
-              </tr>
+                <tr>
+                  <th></th>
+                  <th>title</th>
+                  <th>opinion</th>
+                  <th colspan="3"></th>
+                </tr>
               </thead>
-              
-              
-            <tbody>
-            <% @books.each do |book| %>
-            <tr>
-              <td><%= link_to user_path(book.user.id) do %>
-              <%= attachment_image_tag book.user,:profile_image, size: "40x40", fallback: "no_image.jpg" %>
-              <% end %></td>
-              <td><%= link_to book.title, book_path(book.id) %></td>
-              <td><%= book.body %></td>
-              <td><% if book.favorited_by?(current_user) %>
-    <p>
-      <%= link_to book_favorites_path(book), method: :delete do %>
-        ♥<%= book.favorites.count %>
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to book_favorites_path(book), method: :post do %>
-        ♡<%= book.favorites.count %>
-      <% end %>
-    </p>
-    
-  <% end %></td>
-  <td><p>コメント数:<%= book.books_comments.count %></p></td>
-            </tr>
-            <% end %>
-            </tbody>
-          </table>
-       </div> 
-  </div>
+              <tbody>
+              <% @books.each do |book| %>
+                <tr>
+                  <td><%= link_to user_path(book.user.id) do %>
+                  <%= attachment_image_tag book.user,:profile_image, size: "40x40", fallback: "no_image.jpg" %>
+                  <% end %></td>
+                  <td><%= link_to book.title, book_path(book.id) %></td>
+                  <td><%= book.body %></td>
+                  <td class= 'favorite-btn_<%= book.id %>'><%= render 'favorites/favorite-btn', book: book %></td>
+                  <td><p>コメント数:<%= book.books_comments.count %></p></td>
+                </tr>
+              <% end %>
+              </tbody>
+            </table>
+          </div>
+ </div>
 </div>
