--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,11 +27,11 @@
           </table>
           
           <div class="comment_area">
-            <%= render 'books_comments/book_comment', book_comments: @book_comments %>
+            <%= render 'books_comments/book_comment', book_comments: @books_comments %>
           </div>
           
           <div class='comment_form'>
-            <%= render 'books_comments/form', book: @book, book_comment: @books_comment %>
+            <%= render 'books_comments/form', book: @book, book_comment: @book_comment %>
             </div>
 
        </div> 
