--- a/app/views/books_comments/_book_comment.html.erb
+++ b/app/views/books_comments/_book_comment.html.erb
@@ -1,6 +1,6 @@
 <table>
   <tbody>
-      <% books_comments.each do |book_comment| %>
+      <% book_comments.each do |book_comment| %>
       <tr><td><p><%= attachment_image_tag book_comment.user, :profile_image, size: "40x40", fallback: "no_image.jpg" %></p>
       <%= link_to book_comment.user.name, user_path(book_comment.user_id), remote: true %>
       <td><%= book_comment.comment %></td>
